# profile_page

./: README.md  about.json  projects.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
app/core/: config.py
app/routers/: about.py  contact.py  home.py  projects.py
app/static/css/: style.css  style_all.css
app/templates/: about.html  base.html  contact.html  home.html  index.html  projects.html
