[project]
name = "profile-page"
version = "0.1.0"
description = ""
authors = [
    {name = "ji-min0",email = "k.jimin2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "orjson (==3.10.12)",
    "starlette (>=0.48.0,<0.49.0)",
    "pydantic (>=2.11.9,<2.12.0)",
    "pydantic-settings (>=2.11.0,<2.12.0)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.20)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==24.10.0)",
    "ruff (==0.8.2)",
    "mypy (==1.13.0)",
    "pytest (==8.3.4)",
    "coverage (==7.6.9)",
    "pytest-asyncio (==0.25.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "click (==8.3.0)",
    "colorama (==0.4.6)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "sniffio (==1.3.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)"
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"