[project]
name = "profile-page"
version = "0.1.0"
description = ""
authors = [
    {name = "ji-min0",email = "k.jimin2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "orjson",
    "starlette",
    "pydantic",
    "pydantic-settings",
    "pydantic-core",
    "python-dotenv",
    "python-multipart",
    "jinja2",
    "markupsafe"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]

[dependency-groups]
dev = [
    "ruff",
    "annotated-types",
    "anyio",
    "click",
    "colorama",
    "h11",
    "idna",
    "sniffio",
    "typing-inspection",
    "typing-extensions"
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"
